Д.З. №2.19. Разметка главной страницы
Выполнила Домашнее задание №2.19

--- a/index/popup.html
+++ b/index/popup.html
@@ -7,10 +7,10 @@
   <body>
     <header>
       <nav>
-        <a class="main-header-logo">
-      <img src="https://via.placeholder.com/150x100" width="150" height="100" alt="Логотип сайта городка Седона">
-        </a>
-        <ul class="site-navigation">
+        <a>
+      <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+    </a>
+        <ul>
           <li><a href="blanck.html">Информация</a></li>Информация
           <li><a href="blanck.html">Фото и видео</a></li>Фото и видео
           <li><a href="blanck.html">Карта штата</a></li>Карта штата
@@ -29,11 +29,11 @@
     </section>
     <section>
       <p>Седона — небольшой городок в Аризоне, </br>заслуживающий большего! </p>
+    </section>
+    <section>
       <h2>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
       <ul>
       <li>
-    </section>
-    <section>
         <h3>Настоящий</br>городок</h3>
         <p>№1</p>
         <p>Седона — не аттракцион для туристов, там</br>течёт своя жизнь</p>
@@ -44,9 +44,7 @@
     <ul>
     <li>
       <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
-    </section>
-      <section>
-        <h2>Жильё</h2>
+      <h2>Жильё</h2>
      <p>Рекомендуем пожить в настоящем</br>мотеле, всё как в кино!</p>
     </li>
   </ul>
@@ -66,8 +64,6 @@
     </ul>
     <ul>
     <li>
-    </section>
-      <section>
       <h3>Там есть</br>мост дьявола</h3>
       <p>№2</p>
       <p>Да, по нему можно пройти! Если конечно,</br>вы осмелитесь</p>
@@ -77,8 +73,6 @@
   </ul>
 </li>
 </ul>
-     </section>
-     <section>
 <ul>
 <li>
 <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
@@ -116,7 +110,7 @@
   </p>
 </section>
 <section>
-  <h2>Социальные сети</h2>
+  <h2>Давайте дружить!</h2>
   <ul>
     <li>
       <a href="#">Твитер</a>
