--- a/index.html
+++ b/index.html
@@ -5,7 +5,131 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a>
+      <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+    </a>
+        <ul>
+          <li><a href="blanck.html">Информация</a></li>Информация
+          <li><a href="blanck.html">Фото и видео</a></li>Фото и видео
+          <li><a href="blanck.html">Карта штата</a></li>Карта штата
+          <li><a href="catalogue.html">Гостиницы</a></li>Гостиницы
+        </ul>
+        <a href="blank.html">Вход</a>
+      </nav>
+    </header>
 
+  <main>
+    <h1>Welcome to Gorgeus</h1>
+    <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+    <section><p> SEDONA </P>
+    </section><p>"Because the Grand</br>Canyon sucks"</p>
+    <section>
+    </section>
+    <section>
+      <p>Седона — небольшой городок в Аризоне, </br>заслуживающий большего! </p>
+    </section>
+    <section>
+      <h2>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
+      <ul>
+      <li>
+        <h3>Настоящий</br>городок</h3>
+        <p>№1</p>
+        <p>Седона — не аттракцион для туристов, там</br>течёт своя жизнь</p>
+<figure><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+</figure>
+      </li>
+    </ul>
+    <ul>
+    <li>
+      <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
+      <h2>Жильё</h2>
+     <p>Рекомендуем пожить в настоящем</br>мотеле, всё как в кино!</p>
+    </li>
+  </ul>
+    <ul>
+      <li>
+        <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
+        <h2>Еда</h2>
+        <p>Всегда заказывайте фирменный бургер,</br>вы не разочаруетесь!</p>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
+        <h2>Сувениры</h2>
+        <p>Не только китайского, но и местного</br>производства</p>
+      </li>
+    </ul>
+    <ul>
+    <li>
+      <h3>Там есть</br>мост дьявола</h3>
+      <p>№2</p>
+      <p>Да, по нему можно пройти! Если конечно,</br>вы осмелитесь</p>
+<figure><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+</figure>
+    </li>
+  </ul>
+</li>
+</ul>
+<ul>
+<li>
+<img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
+<h2>Небольшая</br>площадь</h2>
+<p>№3</p>
+<p>все достопримечательности</br>находятся очень близко</p>
+</li>
+</ul>
+<ul>
+<li>
+  <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
+  <h2>Красивая</br>дорога</h2>
+  <p>№4</p>
+  <p>Ехать в Седону из Лас-Вегаса совсем</br>не скучно!</p>
+</li>
+</ul>
+<ul>
+<li>
+  <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
+  <h2>Мало</br>туристов</h2>
+  <p>№5</p>
+  <p>Большинство едет в Гранд Каньон</br>и толпится там</p>
+</li>
+</ul>
+<section>
+  <h2>Заинтересовались?</h2>
+<p>  Укажите предполагаемые даты поездки,</br> и мы покажем вам лучшие предложения гостиниц в седоне  </p>
+ <button type="submit">Поиск гостиницы в Седоне</button>
+</section>
+<footer>
+<section>
+  <h2>#VISITSEDONA</h2>
+  <p>
+    Телефон: <a href="tel:+78005558628">+7 800 555-86-28</a>
+  </p>
+</section>
+<section>
+  <h2>Социальные сети</h2>
+  <ul>
+    <li>
+      <a href="#">Твитер</a>
+    </li>
+    <li>
+      <a href="#">Фейсбук</a>
+    </li>
+    <li>
+      <a href="#">Инстаграм</a>
+    </li>
+  </ul>
+</section>
+<p>
+  Website by
+  <a href=href="https://htmlacademy.ru">HTML Academy</a>
+        <img src="img/studio.jpg" width="286" height="164" alt="Логотип HTML Academy">
+</p>
+</footer>
+  </main>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </body>
