--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,160 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
+    <header>
+      <nav>
+        <a>
+      <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+    </a>
+        <ul>
+          <li><a href="blanck.html">Информация</a></li>Информация
+          <li><a href="blanck.html">Фото и видео</a></li>Фото и видео
+          <li><a href="blanck.html">Карта штата</a></li>Карта штата
+          <li><a href="catalogue.html">Гостиницы</a></li>Гостиницы
+        </ul>
+        <a href="blank.html">Вход</a>
+      </nav>
+    </header>
+    <main
+    <section>
+      <h2>Фильтр для выбора жилья</h2>
+      <form method="get" action="https://echo.htmlacademy.ru">
+        <fieldset>
+          <legend>Инфраструктура:</legend>
+           <label><input type="checkbox" name="infrastructure" checked ></label>
+           <label for="infrastructure">Бассейн</label>
+           <label><input type="checkbox" name="infrastructure"></label>
+           <label for="infrastructure">Парковка</label>
+           <label><input type="checkbox" name="infrastructure"></label>
+           <label for="infrastructure">Wi-Fi</label>
+        </fieldset>
+        <fieldset>
+          <legend>Тип жилья:</legend>
+          <ul>
+          <li>
+            <input type="checkbox" name="type-of-housing" value="hotel" id="filter-hotel">
+            <label for="filter-hotel">Гостиница</label>
+          </li>
+        </ul>
+        <ul>
+        <li>
+          <input type="checkbox" name="type-of-housing" value="motel" id="filter-motel">
+          <label for="filter-motel">Мотель</label>
+        </li>
+      </ul>
+    <ul>
+    <li>
+      <input type="checkbox" name="type-of-housing" value="apartments" id="filter-apartments">
+      <label for="filter-apartments">Апартаменты</label>
+    </li>
+  </ul>
+        </fieldset>
+        <fieldset>
+    <legend>Стоимость в сутки, <span>₽</span></legend>
+    <label>от<input type="text" value="0"></label>
+    <label>до<input type="text" value="3000"></label>
+  </fieldset>
+        <button type="submit">Показать</button>
+      </form>
+    </section>
+    <section>
+      <h2>Найдено:3</h2>
+      <p>Сортировка</p>
+      <li>
+       <a>По цене</a>
+     </li>
+     <li>
+        <a href="#">По типу</a>
+      </li>
+      <li>
+         <a href="#">По рейтингу</a>
+       </li>
+    </section>
+    <section>
+      <h2>Список жилья</h2>
+      <ul>
+        <li>
+          <a href="catalog.html">
+            <h3>Гостиница Amara Resort & Spa</h3>
+            <p>
+              <img src="https://via.placeholder.com/150x100" alt="Гостиница Amara Resort & Spa">
+            </p>
+            <p>Гостиница</p>
+            <p>от 4000 ₽</p>
+          </a>
+          <p>
+            <button type="button">Подробнее</button>
+          </p>
+          <p>
+            <button type="button">Заюронировать</button>
+          </p>
+          <p>Рейтинг:8,5</p>
+        </li>
+        <ul>
+          <li>
+            <a href="catalog.html">
+              <h3>Мотель Desert Quail Inn</h3>
+              <p>
+                <img src="https://via.placeholder.com/150x100" alt="Мотель Desert Quail Inn">
+              </p>
+              <p>Мотель</p>
+              <p>от 3000 ₽</p>
+            </a>
+            <p>
+              <button type="button">Подробнее</button>
+            </p>
+            <p>
+              <button type="button">Забронировать</button>
+            </p>
+            <p>Рейтинг:8,9</p>
+          </li>
+          <ul>
+            <li>
+              <a href="catalog.html">
+                <h3>Апартаменты Villas at Poco Diablo</h3>
+                <p>
+                  <img src="https://via.placeholder.com/150x100" alt="Апартаменты Villas at Poco Diablo">
+                </p>
+                <p>Апартаменты</p>
+                <p>от 2000 ₽</p>
+              </a>
+              <p>
+                <button type="button">Подробнее</button>
+              </p>
+              <p>
+                <button type="button">Забронировать</button>
+              </p>
+              <p>Рейтинг:9,2</p>
+            </li>
+      </section>
+    </main>
+    <footer>
+    <section>
+      <h2>#VISITSEDONA</h2>
+      <p>
+        Телефон: <a href="tel:+78005558628">+7 800 555-86-28</a>
+      </p>
+    </section>
+    <section>
+      <h2>Социальные сети</h2>
+      <ul>
+        <li>
+          <a href="#">Твитер</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+    </section>
+    <p>
+      Website by
+      <a href=href="https://htmlacademy.ru">HTML Academy</a>
+            <img src="img/studio.jpg" width="286" height="164" alt="Логотип HTML Academy">
+    </p>
+    </footer>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
   </body>
 </html>
