ДЗ Разметка внутренней страницы
выполнила ещё одна дз

--- a/index.html
+++ b/index.html
@@ -11,36 +11,32 @@
       <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
     </a>
         <ul>
-          <li><a href="blanck.html">Информация</a></li>Информация
-          <li><a href="blanck.html">Фото и видео</a></li>Фото и видео
-          <li><a href="blanck.html">Карта штата</a></li>Карта штата
-          <li><a href="catalogue.html">Гостиницы</a></li>Гостиницы
+          <li><a href="blanck.html">Информация</a></li>
+          <li><a href="blanck.html">Фото и видео</a></li>
+          <li><a href="blanck.html">Карта штата</a></li>
+          <li><a href="catalogue.html">Гостиницы</a></li>
         </ul>
-        <a href="blank.html">Вход</a>
       </nav>
     </header>
-
   <main>
     <h1>Welcome to Gorgeus</h1>
-    <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+    <div><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
     <section><p> SEDONA </P>
-    </section><p>"Because the Grand</br>Canyon sucks"</p>
+    <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Because the Grand</br>Canyon sucks">
+    </div>
     <section>
+      <h2>Седона — небольшой городок в Аризоне, </br>заслуживающий большего! </h2>
     </section>
     <section>
-      <p>Седона — небольшой городок в Аризоне, </br>заслуживающий большего! </p>
-    </section>
-    <section>
-      <h2>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
-      <ul>
-      <li>
+      <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      <div>
         <h3>Настоящий</br>городок</h3>
         <p>№1</p>
         <p>Седона — не аттракцион для туристов, там</br>течёт своя жизнь</p>
-<figure><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
-</figure>
-      </li>
-    </ul>
+      <div>
+        <section><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+        </section>
+    <section>
     <ul>
     <li>
       <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
@@ -64,11 +60,15 @@
     </ul>
     <ul>
     <li>
+    </section>
+    <section>
+      <div>
       <h3>Там есть</br>мост дьявола</h3>
       <p>№2</p>
       <p>Да, по нему можно пройти! Если конечно,</br>вы осмелитесь</p>
-<figure><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
-</figure>
+      <div>
+<section><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+</section>
     </li>
   </ul>
 </li>
@@ -102,6 +102,8 @@
 <p>  Укажите предполагаемые даты поездки,</br> и мы покажем вам лучшие предложения гостиниц в седоне  </p>
  <button type="submit">Поиск гостиницы в Седоне</button>
 </section>
+<section class="map" id= "map"></section>
+</main>
 <footer>
 <section>
   <h2>#VISITSEDONA</h2>
@@ -129,8 +131,5 @@
         <img src="img/studio.jpg" width="286" height="164" alt="Логотип HTML Academy">
 </p>
 </footer>
-  </main>
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
   </body>
 </html>
