--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+
     <header>
       <nav>
         <a>
@@ -18,15 +19,19 @@
         </ul>
       </nav>
     </header>
+
   <main>
+
     <h1>Welcome to Gorgeus</h1>
     <div><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
     <section><p> SEDONA </P>
     <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Because the Grand</br>Canyon sucks">
     </div>
+
     <section>
       <h2>Седона — небольшой городок в Аризоне, </br>заслуживающий большего! </h2>
     </section>
+
     <section>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
       <div>
@@ -36,14 +41,17 @@
       <div>
         <section><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
         </section>
+
     <section>
+
     <ul>
     <li>
       <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
       <h2>Жильё</h2>
      <p>Рекомендуем пожить в настоящем</br>мотеле, всё как в кино!</p>
     </li>
-  </ul>
+    </ul>
+
     <ul>
       <li>
         <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
@@ -51,6 +59,7 @@
         <p>Всегда заказывайте фирменный бургер,</br>вы не разочаруетесь!</p>
       </li>
     </ul>
+
     <ul>
       <li>
         <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
@@ -58,9 +67,8 @@
         <p>Не только китайского, но и местного</br>производства</p>
       </li>
     </ul>
-    <ul>
-    <li>
     </section>
+
     <section>
       <div>
       <h3>Там есть</br>мост дьявола</h3>
@@ -69,67 +77,61 @@
       <div>
 <section><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
 </section>
-    </li>
-  </ul>
-</li>
-</ul>
-<ul>
-<li>
-<img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
-<h2>Небольшая</br>площадь</h2>
-<p>№3</p>
-<p>все достопримечательности</br>находятся очень близко</p>
-</li>
-</ul>
-<ul>
-<li>
-  <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
-  <h2>Красивая</br>дорога</h2>
-  <p>№4</p>
-  <p>Ехать в Седону из Лас-Вегаса совсем</br>не скучно!</p>
-</li>
-</ul>
-<ul>
-<li>
-  <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
-  <h2>Мало</br>туристов</h2>
-  <p>№5</p>
-  <p>Большинство едет в Гранд Каньон</br>и толпится там</p>
-</li>
-</ul>
+
 <section>
-  <h2>Заинтересовались?</h2>
-<p>  Укажите предполагаемые даты поездки,</br> и мы покажем вам лучшие предложения гостиниц в седоне  </p>
- <button type="submit">Поиск гостиницы в Седоне</button>
-</section>
-<section class="map" id= "map"></section>
-</main>
-<footer>
-<section>
-  <h2>#VISITSEDONA</h2>
-  <p>
-    Телефон: <a href="tel:+78005558628">+7 800 555-86-28</a>
-  </p>
-</section>
-<section>
-  <h2>Социальные сети</h2>
-  <ul>
-    <li>
-      <a href="#">Твитер</a>
-    </li>
-    <li>
-      <a href="#">Фейсбук</a>
-    </li>
-    <li>
-      <a href="#">Инстаграм</a>
-    </li>
-  </ul>
-</section>
-<p>
+
+    <ul>
+      <li>
+        <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
+        <h2>Небольшая</br>площадь</h2>
+        <p>№3</p>
+        <p>все достопримечательности</br>находятся очень близко</p>
+      </li>
+    </ul>
+
+    <ul>
+      <li>
+        <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
+        <h2>Красивая</br>дорога</h2>
+        <p>№4</p>
+        <p>Ехать в Седону из Лас-Вегаса совсем</br>не скучно!</p>
+      </li>
+    </ul>
+
+    <ul>
+      <li>
+        <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
+        <h2>Мало</br>туристов</h2>
+        <p>№5</p>
+        <p>Большинство едет в Гранд Каньон</br>и толпится там</p>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+
+    <h2>Заинтересовались?</h2>
+    <p>  Укажите предполагаемые даты поездки,</br> и мы покажем вам лучшие предложения гостиниц в седоне  </p>
+    <button type="submit">Поиск гостиницы в Седоне</button>
+  </section>
+
+  <section class="map" id= "map"></section>
+
+  </main>
+
+  <footer>
+    <section>
+      <h2>#VISITSEDONA</h2>
+
+      <p>Телефон: <a href="tel:+78005558628">+7 800 555-86-28</a></p>
+    </section>
+
+    <section>
+      <p>
   Website by
   <a href=href="https://htmlacademy.ru">HTML Academy</a>
         <img src="img/studio.jpg" width="286" height="164" alt="Логотип HTML Academy">
-</p>
-</footer>
+      </p>
+    </footer>
   </body>
 </html>
