--- a/catalog.html
+++ b/catalog.html
@@ -11,10 +11,10 @@
       <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
     </a>
         <ul>
-          <li><a href="blanck.html">Информация</a></li>Информация
-          <li><a href="blanck.html">Фото и видео</a></li>Фото и видео
-          <li><a href="blanck.html">Карта штата</a></li>Карта штата
-          <li><a href="catalogue.html">Гостиницы</a></li>Гостиницы
+          <li><a href="blanck.html">Информация</a></li>
+          <li><a href="blanck.html">Фото и видео</a></li>
+          <li><a href="blanck.html">Карта штата</a></li>
+          <li><a href="catalogue.html">Гостиницы</a></li>
         </ul>
         <a href="blank.html">Вход</a>
       </nav>
@@ -159,6 +159,4 @@
             <img src="img/studio.jpg" width="286" height="164" alt="Логотип HTML Academy">
     </p>
     </footer>
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-  </body>
 </html>
