--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
+<body>
 
     <header>
       <nav>
@@ -20,118 +20,130 @@
       </nav>
     </header>
 
-  <main>
-
+<main>
+ <section>
     <h1>Welcome to Gorgeus</h1>
     <div><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
-    <section><p> SEDONA </P>
+    <p> SEDONA </P>
     <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Because the Grand</br>Canyon sucks">
     </div>
+ </section>
 
-    <section>
+ <section>
       <h2>Седона — небольшой городок в Аризоне, </br>заслуживающий большего! </h2>
-    </section>
-
-    <section>
       <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-      <div>
-        <h3>Настоящий</br>городок</h3>
-        <p>№1</p>
-        <p>Седона — не аттракцион для туристов, там</br>течёт своя жизнь</p>
-      <div>
-        <section><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
-        </section>
+ </section>
 
-    <section>
+ <section>
+    <div>
+      <h3>Настоящий</br>городок</h3>
+      <span>№1</span>
+      <p>Седона — не аттракцион для туристов, там</br>течёт своя жизнь</p>
+    </div>
+    <div>
+      <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+    </div>
+ </section>
+
+ <section>
 
     <ul>
-    <li>
+     <li>
       <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
-      <h2>Жильё</h2>
+      <h3>Жильё</h3>
      <p>Рекомендуем пожить в настоящем</br>мотеле, всё как в кино!</p>
+     </li>
+
+     <li>
+      <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
+      <h3>Еда</h3>
+      <p>Всегда заказывайте фирменный бургер,</br>вы не разочаруетесь!</p>
+     </li>
+
+     <li>
+        <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
+        <h3>Сувениры</h3>
+        <p>Не только китайского, но и местного</br>производства</p>
     </li>
     </ul>
+ </section>
 
-    <ul>
-      <li>
-        <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
-        <h2>Еда</h2>
-        <p>Всегда заказывайте фирменный бургер,</br>вы не разочаруетесь!</p>
-      </li>
-    </ul>
-
-    <ul>
-      <li>
-        <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
-        <h2>Сувениры</h2>
-        <p>Не только китайского, но и местного</br>производства</p>
-      </li>
-    </ul>
-    </section>
-
-    <section>
-      <div>
+ <section>
+    <div>
       <h3>Там есть</br>мост дьявола</h3>
-      <p>№2</p>
+      <span>№2</span>
       <p>Да, по нему можно пройти! Если конечно,</br>вы осмелитесь</p>
-      <div>
-<section><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
-</section>
+   </div>
+   <div>
+     <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+   </div>
+ </section>
 
-<section>
+ <section>
 
     <ul>
       <li>
         <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
-        <h2>Небольшая</br>площадь</h2>
-        <p>№3</p>
+        <h3>Небольшая</br>площадь</h3>
+        <span>№3</span>
         <p>все достопримечательности</br>находятся очень близко</p>
       </li>
-    </ul>
 
-    <ul>
       <li>
         <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
-        <h2>Красивая</br>дорога</h2>
-        <p>№4</p>
+        <h3>Красивая</br>дорога</h3>
+        <span>№4</span>
         <p>Ехать в Седону из Лас-Вегаса совсем</br>не скучно!</p>
       </li>
-    </ul>
 
-    <ul>
       <li>
         <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
-        <h2>Мало</br>туристов</h2>
-        <p>№5</p>
+        <h3>Мало</br>туристов</h3>
+        <span>№5</span>
         <p>Большинство едет в Гранд Каньон</br>и толпится там</p>
       </li>
     </ul>
-  </section>
+ </section>
 
-  <section>
-
+ <section>
     <h2>Заинтересовались?</h2>
     <p>  Укажите предполагаемые даты поездки,</br> и мы покажем вам лучшие предложения гостиниц в седоне  </p>
     <button type="submit">Поиск гостиницы в Седоне</button>
-  </section>
+ </section>
 
-  <section class="map" id= "map"></section>
+ <section class="map" id= "map">
+ </section>
 
-  </main>
+</main>
 
-  <footer>
-    <section>
+<footer>
+  <section>
       <h2>#VISITSEDONA</h2>
-
       <p>Телефон: <a href="tel:+78005558628">+7 800 555-86-28</a></p>
-    </section>
-
-    <section>
-      <p>
-  Website by
+  </section>
+  <section>
+      <h2>Социальные сети</h2>
+      <ul>
+        <li>
+          <a href="#">Твитер</a>
+          <img src="img/studio.jpg" width="50" height="50" alt="Логотип Твитера">
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+          <img src="img/studio.jpg" width="50" height="50" alt="Логотип Фейсбука">
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+          <img src="img/studio.jpg" width="50" height="50" alt="Логотип Инстаграма">
+        </li>
+      </ul>
+   </section>
+   <section>
+      <p> Website by
   <a href=href="https://htmlacademy.ru">HTML Academy</a>
         <img src="img/studio.jpg" width="286" height="164" alt="Логотип HTML Academy">
       </p>
-    </footer>
-  </body>
+   </section>
+</footer>
+</body>
 </html>
