--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <main>
  <section>
     <h1>Welcome to Gorgeus</h1>
-    <div><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+    <div><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Общий вид каньона в Седоне">
     <p> SEDONA </P>
     <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Because the Grand</br>Canyon sucks">
     </div>
@@ -41,7 +41,7 @@
       <p>Седона — не аттракцион для туристов, там</br>течёт своя жизнь</p>
     </div>
     <div>
-      <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+      <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Фотография вида на здания Седоны">
     </div>
  </section>
 
@@ -75,7 +75,7 @@
       <p>Да, по нему можно пройти! Если конечно,</br>вы осмелитесь</p>
    </div>
    <div>
-     <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+     <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Вид на каньон Седоны сверху">
    </div>
  </section>
 
@@ -126,22 +126,22 @@
       <ul>
         <li>
           <a href="#">Твитер</a>
-          <img src="img/studio.jpg" width="50" height="50" alt="Логотип Твитера">
+          <img src="img/studio.jpg" width="60" height="60" alt="Логотип Твитера">
         </li>
         <li>
           <a href="#">Фейсбук</a>
-          <img src="img/studio.jpg" width="50" height="50" alt="Логотип Фейсбука">
+          <img src="img/studio.jpg" width="60" height="60" alt="Логотип Фейсбука">
         </li>
         <li>
           <a href="#">Инстаграм</a>
-          <img src="img/studio.jpg" width="50" height="50" alt="Логотип Инстаграма">
+          <img src="img/studio.jpg" width="60" height="60" alt="Логотип Инстаграма">
         </li>
       </ul>
    </section>
    <section>
       <p> Website by
   <a href=href="https://htmlacademy.ru">HTML Academy</a>
-        <img src="img/studio.jpg" width="286" height="164" alt="Логотип HTML Academy">
+        <img src="img/studio.jpg" width="50" height="50" alt="Логотип HTML Academy">
       </p>
    </section>
 </footer>
