--- a/catalog.html
+++ b/catalog.html
@@ -117,7 +117,7 @@
         </li>
         <li>
           <div>
-              <img src="https://via.placeholder.com/150x100" alt="Мотель Desert Quail Inn">
+              <img src="https://via.placeholder.com/150x100" alt="Главное фото Мотеля Desert Quail Inn">
               <h3>Мотель Desert Quail Inn</h3>
               <p>Мотель от 3000 ₽</p>
               <div>
