Выполнила ДЗ 3.12. Графика всех страниц
Наконец-то подключили графику. Уже не терпится увидеть, как всё будет выглядеть

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+     <link rel="icon" href="favicon.ico">
   </head>
-<body>
 
+<body>
     <header>
       <nav>
         <a>
-      <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+         <img src="img/logo-sedona.png"
+              width="138"
+              height="70"
+              alt="Логотип городка Седона">
     </a>
         <ul>
           <li><a href="blanck.html">Информация</a></li>
@@ -24,6 +28,9 @@
  <section>
     <h1>Welcome to Gorgeus</h1>
     <div><img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Общий вид каньона в Седоне">
+      <!-- Welcome to Gorgeus, SEDONA и Because the Grand Canyon sucks.
+      Я так поняла, что это фоновые и декоративные картинки.
+      Их пока не нужно подключать -->
     <p> SEDONA </P>
     <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Because the Grand</br>Canyon sucks">
     </div>
@@ -41,7 +48,10 @@
       <p>Седона — не аттракцион для туристов, там</br>течёт своя жизнь</p>
     </div>
     <div>
-      <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Фотография вида на здания Седоны">
+      <img src="img/town-view.jpg"
+           width="800"
+           height="256"
+           alt="Фотография вида на здания Седоны">
     </div>
  </section>
 
@@ -49,19 +59,28 @@
 
     <ul>
      <li>
-      <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
+      <img src="img/icons/icon-house.svg"
+           width="75"
+           height="72"
+           alt="Иконка домика">
       <h3>Жильё</h3>
      <p>Рекомендуем пожить в настоящем</br>мотеле, всё как в кино!</p>
      </li>
 
      <li>
-      <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
+      <img src="img/icons/icon-burger.svg"
+           width="75"
+           height="72"
+           alt="Иконка бургера">
       <h3>Еда</h3>
       <p>Всегда заказывайте фирменный бургер,</br>вы не разочаруетесь!</p>
      </li>
 
      <li>
-        <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
+        <img src="img/icons/icon-gift.svg"
+             width="75"
+             height="72"
+             alt="Иконка подарка">
         <h3>Сувениры</h3>
         <p>Не только китайского, но и местного</br>производства</p>
     </li>
@@ -75,7 +94,10 @@
       <p>Да, по нему можно пройти! Если конечно,</br>вы осмелитесь</p>
    </div>
    <div>
-     <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Вид на каньон Седоны сверху">
+     <img src="img/sedona-canyon.jpg"
+          width="800"
+          height="256"
+          alt="Вид на каньон Седоны сверху">
    </div>
  </section>
 
@@ -83,21 +105,18 @@
 
     <ul>
       <li>
-        <img src="img/studio.jpg" width="70" height="70" alt="Иконка домика">
         <h3>Небольшая</br>площадь</h3>
         <span>№3</span>
         <p>все достопримечательности</br>находятся очень близко</p>
       </li>
 
       <li>
-        <img src="img/studio.jpg" width="70" height="70" alt="Иконка бургера">
         <h3>Красивая</br>дорога</h3>
         <span>№4</span>
         <p>Ехать в Седону из Лас-Вегаса совсем</br>не скучно!</p>
       </li>
 
       <li>
-        <img src="img/studio.jpg" width="70" height="70" alt="Иконка подарка">
         <h3>Мало</br>туристов</h3>
         <span>№5</span>
         <p>Большинство едет в Гранд Каньон</br>и толпится там</p>
@@ -112,6 +131,10 @@
  </section>
 
  <section class="map" id= "map">
+   <img src="img/map.jpg"
+       width="1199"
+       height="594"
+       alt="Карта городка Седона">
  </section>
 
 </main>
@@ -126,22 +149,34 @@
       <ul>
         <li>
           <a href="#">Твитер</a>
-          <img src="img/studio.jpg" width="60" height="60" alt="Логотип Твитера">
+          <img src="img/icons/twitter.svg"
+              width="17"
+              height="17"
+              alt="Логотип Твитера">
         </li>
         <li>
           <a href="#">Фейсбук</a>
-          <img src="img/studio.jpg" width="60" height="60" alt="Логотип Фейсбука">
+          <img src="img/icons/fb-icon.svg"
+               width="12"
+               height="22"
+               alt="Логотип Фейсбука">
         </li>
         <li>
           <a href="#">Инстаграм</a>
-          <img src="img/studio.jpg" width="60" height="60" alt="Логотип Инстаграма">
+          <img src="img/icons/youtube.svg"
+               width="20"
+               height="16"
+               alt="Логотип Инстаграма">
         </li>
       </ul>
    </section>
    <section>
       <p> Website by
   <a href=href="https://htmlacademy.ru">HTML Academy</a>
-        <img src="img/studio.jpg" width="50" height="50" alt="Логотип HTML Academy">
+        <img src="img/logo_htmlacademy.svg"
+             width="115"
+             height="33.03"
+             alt="Логотип HTML Academy">
       </p>
    </section>
 </footer>
