--- a/catalog.html
+++ b/catalog.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="icon" href="favicon.ico">
   </head>
 
 <body>
     <header>
       <nav>
         <a>
-      <img src="https://via.placeholder.com/150x100" width="150" height="100"alt="Логотип городка Седона">
+          <img src="img/logo-sedona.png"
+               width="138"
+               height="70"
+               alt="Логотип городка Седона">
     </a>
         <ul>
           <li><a href="blanck.html">Информация</a></li>
@@ -97,7 +101,10 @@
       <ul>
         <li>
           <div>
-            <img src="https://via.placeholder.com/150x100" alt="Гостиница Amara Resort & Spa">
+            <img src="img/photo-amara-resort.jpg"
+                 width="135"
+                 height="90"
+                 alt="Главное фото гостиница Amara Resort & Spa">
             <h3>Гостиница Amara Resort & Spa</h3>
             <p>Гостиница от 4000 ₽</p>
            <div>
@@ -117,7 +124,10 @@
         </li>
         <li>
           <div>
-              <img src="https://via.placeholder.com/150x100" alt="Главное фото Мотеля Desert Quail Inn">
+              <img src="img/photo-desert-quail.jpg"
+                   width="135"
+                   height="90"
+                   alt="Главное фото Мотеля Desert Quail Inn">
               <h3>Мотель Desert Quail Inn</h3>
               <p>Мотель от 3000 ₽</p>
               <div>
@@ -137,7 +147,10 @@
        </li>
        <li>
           <div>
-                <img src="https://via.placeholder.com/150x100" alt="Апартаменты Villas at Poco Diablo">
+                <img src="img/photo-villas-diablo.jpg"
+                     width="135"
+                     height="90"
+                     alt="Апартаменты Villas at Poco Diablo">
                 <h3>Апартаменты Villas at Poco Diablo</h3>
                 <p>Апартаменты</p>от 2000 ₽</p>
                 <div>
@@ -159,32 +172,44 @@
 </main>
 
 <footer>
-    <section>
-          <h2>#VISITSEDONA</h2>
-          <p>Телефон: <a href="tel:+78005558628">+7 800 555-86-28</a></p>
-    </section>
-    <section>
-          <h2>Социальные сети</h2>
-          <ul>
-            <li>
-              <a href="#">Твитер</a>
-              <img src="img/studio.jpg" width="60" height="60" alt="Логотип Твитера">
-            </li>
-            <li>
-              <a href="#">Фейсбук</a>
-              <img src="img/studio.jpg" width="60" height="60" alt="Логотип Фейсбука">
-            </li>
-            <li>
-              <a href="#">Инстаграм</a>
-              <img src="img/studio.jpg" width="60" height="60" alt="Логотип Инстаграма">
-            </li>
-          </ul>
-    </section>
-    <section>
-          <p> Website by
-      <a href=href="https://htmlacademy.ru">HTML Academy</a>
-            <img src="img/studio.jpg" width="50" height="50" alt="Логотип HTML Academy">
-          </p>
-    </section>
+  <section>
+      <h2>#VISITSEDONA</h2>
+      <p>Телефон: <a href="tel:+78005558628">+7 800 555-86-28</a></p>
+  </section>
+  <section>
+      <h2>Социальные сети</h2>
+      <ul>
+        <li>
+          <a href="#">Твитер</a>
+          <img src="img/icons/twitter.svg"
+              width="17"
+              height="17"
+              alt="Логотип Твитера">
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+          <img src="img/icons/fb-icon.svg"
+               width="12"
+               height="22"
+               alt="Логотип Фейсбука">
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+          <img src="img/icons/youtube.svg"
+               width="20"
+               height="16"
+               alt="Логотип Инстаграма">
+        </li>
+      </ul>
+   </section>
+   <section>
+      <p> Website by
+  <a href=href="https://htmlacademy.ru">HTML Academy</a>
+        <img src="img/logo_htmlacademy.svg"
+             width="115"
+             height="33.03"
+             alt="Логотип HTML Academy">
+      </p>
+   </section>
 </footer>
 </html>
