--- a/catalog.html
+++ b/catalog.html
@@ -181,21 +181,21 @@
       <ul>
         <li>
           <a href="#">Твитер</a>
-          <img src="img/icons/twitter.svg"
+          <img src="https://via.placeholder.com/150x100"
               width="17"
               height="17"
               alt="Логотип Твитера">
         </li>
         <li>
           <a href="#">Фейсбук</a>
-          <img src="img/icons/fb-icon.svg"
+          <img src="https://via.placeholder.com/150x100"
                width="12"
                height="22"
                alt="Логотип Фейсбука">
         </li>
         <li>
           <a href="#">Инстаграм</a>
-          <img src="img/icons/youtube.svg"
+          <img src="https://via.placeholder.com/150x100"
                width="20"
                height="16"
                alt="Логотип Инстаграма">
@@ -205,7 +205,7 @@
    <section>
       <p> Website by
   <a href=href="https://htmlacademy.ru">HTML Academy</a>
-        <img src="img/logo_htmlacademy.svg"
+        <img src="https://via.placeholder.com/150x100"
              width="115"
              height="33.03"
              alt="Логотип HTML Academy">
