--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <ul>
      <li>
-      <img src="img/icons/icon-house.svg"
+      <img src="https://via.placeholder.com/150x100"
            width="75"
            height="72"
            alt="Иконка домика">
@@ -68,7 +68,7 @@
      </li>
 
      <li>
-      <img src="img/icons/icon-burger.svg"
+      <img src="https://via.placeholder.com/150x100"
            width="75"
            height="72"
            alt="Иконка бургера">
@@ -77,7 +77,7 @@
      </li>
 
      <li>
-        <img src="img/icons/icon-gift.svg"
+        <img src="https://via.placeholder.com/150x100"
              width="75"
              height="72"
              alt="Иконка подарка">
@@ -148,21 +148,21 @@
       <h2>Социальные сети</h2>
       <ul>
         <li>
-          <img src="img/icons/twitter.svg"
+          <img src="https://via.placeholder.com/150x100"
               width="17"
               height="17"
               alt="Логотип Твитера">
           <a href="#">Твитер</a>
         </li>
         <li>
-          <img src="img/icons/fb-icon.svg"
+          <img src="https://via.placeholder.com/150x100"
                width="12"
                height="22"
                alt="Логотип Фейсбука">
           <a href="#">Фейсбук</a>
         </li>
         <li>
-          <img src="img/icons/youtube.svg"
+          <img src="https://via.placeholder.com/150x100"
                width="20"
                height="16"
                alt="Логотип Инстаграма">
