ДЗ Стилизация главной страницы
Фух, ещё с одной дзшкой справилась. (я надеюсь:) )

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link rel="icon" href="favicon.ico">
+    <link href="normalize.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
   </head>
 
 <body>
