--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <link rel="icon" href="favicon.ico">
      <link rel="stylesheet" href="css/normalize.css" >
      <link href="style.css" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic-ext" rel="stylesheet">
+     <link rel="stylesheet" href="https://fonts.google.com/?query=PT+Sans&stylecount=1&preview.size=21&preview.layout=row&subset=cyrillic">
   </head>
 
 <body class="page-body">
